fix error hangup in web

--- a/jitsi_meet/example/web/index.html
+++ b/jitsi_meet/example/web/index.html
@@ -40,6 +40,6 @@
       });
     });
   </script>
-  <script src="https://meet.jit.si/external_api.js" type="application/javascript"></script>
+  <script src="https://jitsi-dev.semilimes.net/external_api.js?v=2.3.334" type="application/javascript"></script>
 </body>
 </html>
